test/spec/block.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/block.wast
(;; STDOUT ;;;
assert_invalid error:
  out/third_party/testsuite/block.wast:133:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-empty-i32 (result i32) (block)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/block.wast:133:11: type stack at end of function is 0. expected 1
  (module (func $type-empty-i32 (result i32) (block)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/block.wast:137:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-empty-i64 (result i64) (block)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/block.wast:137:11: type stack at end of function is 0. expected 1
  (module (func $type-empty-i64 (result i64) (block)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/block.wast:141:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-empty-f32 (result f32) (block)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/block.wast:141:11: type stack at end of function is 0. expected 1
  (module (func $type-empty-f32 (result f32) (block)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/block.wast:145:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-empty-f64 (result f64) (block)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/block.wast:145:11: type stack at end of function is 0. expected 1
  (module (func $type-empty-f64 (result f64) (block)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/block.wast:151:6: type stack at end of block is 1. expected 0
    (block (i32.const 1))
     ^^^^^
assert_invalid error:
  out/third_party/testsuite/block.wast:156:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-value-void-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/block.wast:156:11: type stack at end of function is 0. expected 1
  (module (func $type-value-void-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/block.wast:163:6: type stack at end of block is 1. expected 0
    (block (f32.const 0))
     ^^^^^
assert_invalid error:
  out/third_party/testsuite/block.wast:162:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-value-num-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/block.wast:162:11: type stack at end of function is 0. expected 1
  (module (func $type-value-num-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/block.wast:170:17: type stack size too small at br value. got 0, expected at least 1
    (block i32 (br 0))
                ^^^^
assert_invalid error:
  out/third_party/testsuite/block.wast:176:17: type stack size too small at br value. got 0, expected at least 1
    (block i32 (br 0) (i32.const 1))
                ^^^^
assert_invalid error:
  out/third_party/testsuite/block.wast:182:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-break-void-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/block.wast:182:11: type stack at end of function is 0. expected 1
  (module (func $type-break-void-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/block.wast:188:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-break-num-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/block.wast:188:11: type stack at end of function is 0. expected 1
  (module (func $type-break-num-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/block.wast:194:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-break-first-void-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/block.wast:194:11: type stack at end of function is 0. expected 1
  (module (func $type-break-first-void-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/block.wast:200:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-break-first-num-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/block.wast:200:11: type stack at end of function is 0. expected 1
  (module (func $type-break-first-num-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/block.wast:207:11: type stack at end of function is 1. expected 0
  (module (func $type-break-nested-num-vs-void
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/block.wast:213:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-break-nested-empty-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/block.wast:213:11: type stack at end of function is 0. expected 1
  (module (func $type-break-nested-empty-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/block.wast:220:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-break-nested-void-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/block.wast:220:11: type stack at end of function is 0. expected 1
  (module (func $type-break-nested-void-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/block.wast:226:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-break-nested-num-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/block.wast:226:11: type stack at end of function is 0. expected 1
  (module (func $type-break-nested-num-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/block.wast:234:6: type stack size too small at i32.ctz. got 0, expected at least 1
    (i32.ctz (block (br 0)))
     ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/block.wast:241:6: type stack size too small at i64.ctz. got 0, expected at least 1
    (i64.ctz (block (br 0 (nop))))
     ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/block.wast:240:11: type mismatch at function. got i64, expected i32
  (module (func $type-break-operand-void-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/block.wast:247:6: type stack size too small at i64.ctz. got 0, expected at least 1
    (i64.ctz (block (br 0 (i64.const 9))))
     ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/block.wast:246:11: type mismatch at function. got i64, expected i32
  (module (func $type-break-operand-num-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
out/third_party/testsuite/block.wast:133: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x0000001c: end_function_body callback failed
out/third_party/testsuite/block.wast:137: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x0000001c: end_function_body callback failed
out/third_party/testsuite/block.wast:141: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x0000001c: end_function_body callback failed
out/third_party/testsuite/block.wast:145: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x0000001c: end_function_body callback failed
out/third_party/testsuite/block.wast:150: assert_invalid passed:
  error: type stack at end of block is 1. expected 0
  error: @0x0000001c: on_end_expr callback failed
out/third_party/testsuite/block.wast:156: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x0000001d: end_function_body callback failed
out/third_party/testsuite/block.wast:162: assert_invalid passed:
  error: type stack at end of block is 1. expected 0
  error: @0x00000020: on_end_expr callback failed
out/third_party/testsuite/block.wast:169: assert_invalid passed:
  error: type stack size too small at br. got 0, expected at least 1
  error: @0x0000001c: on_br_expr callback failed
out/third_party/testsuite/block.wast:175: assert_invalid passed:
  error: type stack size too small at br. got 0, expected at least 1
  error: @0x0000001c: on_br_expr callback failed
out/third_party/testsuite/block.wast:182: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x00000021: end_function_body callback failed
out/third_party/testsuite/block.wast:188: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x00000022: end_function_body callback failed
out/third_party/testsuite/block.wast:194: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x00000023: end_function_body callback failed
out/third_party/testsuite/block.wast:200: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x00000024: end_function_body callback failed
out/third_party/testsuite/block.wast:207: assert_invalid passed:
  error: type stack at end of func is 1. expected 0
  error: @0x00000024: end_function_body callback failed
out/third_party/testsuite/block.wast:213: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x00000025: end_function_body callback failed
out/third_party/testsuite/block.wast:220: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x00000026: end_function_body callback failed
out/third_party/testsuite/block.wast:226: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x00000027: end_function_body callback failed
out/third_party/testsuite/block.wast:233: assert_invalid passed:
  error: type stack size too small at i32.ctz. got 0, expected at least 1
  error: @0x0000001e: on_unary_expr callback failed
out/third_party/testsuite/block.wast:240: assert_invalid passed:
  error: type stack size too small at i64.ctz. got 0, expected at least 1
  error: @0x0000001f: on_unary_expr callback failed
out/third_party/testsuite/block.wast:246: assert_invalid passed:
  error: type stack size too small at i64.ctz. got 0, expected at least 1
  error: @0x00000020: on_unary_expr callback failed
34/34 tests passed.
;;; STDOUT ;;)
